--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Verify Dockerfile exists
         run: |
-          if [ ! -f Dockerfile ]; then
+          if [ ! -f app/Dockerfile ]; then
             echo "❌ Dockerfile missing! Exiting..."
             exit 1
           fi
@@ -37,7 +37,7 @@ jobs:
           ECR_URI: ${{ secrets.ECR_URI }}
         run: |
           IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-          docker build -t $ECR_URI:$IMAGE_TAG .
+          docker build -t $ECR_URI:$IMAGE_TAG -f app/Dockerfile app/
           docker push $ECR_URI:$IMAGE_TAG
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
